--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "new_node",
   "version": "1.0.0",
   "description": "assignment",
-  "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "cd build/src && node .",
-    "prestart": "tsc"
+    "dev": "nodemon --watch src ./src/index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -25,9 +23,14 @@
     "winston-daily-rotate-file": "^4.5.5"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
+    "@types/http-errors": "^1.8.1",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^16.4.10",
+    "nodemon": "^2.0.12",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   }
